// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the progress bar matches the snapshot 1`] = `
<progress
  className="sc-bdVaJa kgeAzp"
  max={1}
  value={0}
/>
`;

exports[`the progress bar with custom color matches the snapshot 1`] = `
<progress
  className="sc-bdVaJa iRXsVv"
  max={100}
  value={50}
/>
`;

exports[`the progress bar with progress matches the snapshot 1`] = `
<progress
  className="sc-bdVaJa kgeAzp"
  max={100}
  value={50}
/>
`;
